methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:77: error: expected class or object definition
def jumpR() {
^MethodsPicture:88: error: expected class or object definition
def jumpL() {
^MethodsPicture:99: error: expected class or object definition
def jumpU() {
^MethodsPicture:114: error: expected class or object definition
def jumpD() {
^MethodsPicture:128: error: Unmatched closing brace '}' ignored here
}
^